# SlicerOpenAnatomy

./: AtlasEditor.s4ext  CMakeLists.txt  README.md  SlicerOpenAnatomy.xcf
AtlasEditor/: AtlasEditor.py  CMakeLists.txt  README.md
AtlasEditor/Resources/UI/: AtlasEditor.ui
GltfSupport/: CMakeLists.txt  qSlicerGLTFReader.cxx  qSlicerGltfSupportModule.cxx  qSlicerGltfSupportModule.h  qSlicerGltfSupportModuleWidget.cxx  qSlicerGltfSupportModuleWidget.h
GltfSupport/Logic/: vtkGLTFDocumentLoader.h  vtkGLTFExporter.h  vtkGLTFImporter.h  vtkGLTFReader.h  vtkSlicerGltfSupportLogic.cxx  vtkSlicerGltfSupportLogic.h
GltfSupport/Logic/Testing/Cxx/: CMakeLists.txt
GltfSupport/Resources/: qSlicerGltfSupportModule.qrc
GltfSupport/Resources/UI/: qSlicerGltfSupportModuleWidget.ui
GltfSupport/Testing/Cxx/: CMakeLists.txt
OpenAnatomyExport/: CMakeLists.txt  OpenAnatomyExport.py  README.md
OpenAnatomyExport/Resources/UI/: OpenAnatomyExport.ui
OpenAnatomyExporter/: CMakeLists.txt  qSlicerOpenAnatomyExporterModule.cxx  qSlicerOpenAnatomyExporterModule.h  qSlicerOpenAnatomyExporterModuleWidget.cxx  qSlicerOpenAnatomyExporterModuleWidget.h
OpenAnatomyExporter/Logic/: CMakeLists.txt  gltf.h  vtkGLTFDocumentLoader.h  vtkGLTFDocumentLoaderInternals.h  vtkGLTFExporter.cxx  vtkGLTFExporter.h  vtkGLTFImporter.h  vtkGLTFReader.h  vtkSlicerOpenAnatomyExporterLogic.cxx  vtkSlicerOpenAnatomyExporterLogic.h
OpenAnatomyExporter/Logic/Testing/Cxx/: vtkGLTFExporterTest1.cxx
OpenAnatomyExporter/Resources/: qSlicerOpenAnatomyExporterModule.qrc
OpenAnatomyExporter/Resources/UI/: qSlicerOpenAnatomyExporterFooBarWidget.ui  qSlicerOpenAnatomyExporterModuleWidget.ui
OpenAnatomyExporter/Widgets/: CMakeLists.txt  qSlicerOpenAnatomyExporterFooBarWidget.cxx  qSlicerOpenAnatomyExporterFooBarWidget.h
